Dark mode button in correct font on Windows

--- a/sim/css/main.css
+++ b/sim/css/main.css
@@ -1938,6 +1938,10 @@ video {
   }
 }
 
+button {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #dark-on {
   display: inline;
 }
